--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ python = "^3.10"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
 flake8 = "^7.0.0"
+pytest-cov = "^4.0.0"
+coverage = "^7.5.1"
 
 [build-system]
 requires = ["poetry-core"]
